<resources>
    <string name="app_name">TP N°1</string>
    <string name="btnEj1">EJERCICIO 1</string>
    <string name="btnEj2">EJERCICIO 2</string>
    <string name="tvPrimerNum">Primer número:</string>
    <string name="btnLimpiar">Borrar</string>
    <string name="tvIntegrantes">Integrantes:</string>
    <string name="tvJuan">Gonzalez, Juan</string>
    <string name="tvMau">Molina, Mauricio</string>
    <string name="tvJose">Rodriguez, Jose</string>
    <string name="tvMarcos">Vera, Marcos</string>
    <string name="tvSegundoNum">Segundo número:</string>
    <string name="btnCalcular">CALCULAR</string>

    <string name="btnCero">0</string>
    <string name="btnUno">1</string>
    <string name="btnDos">2</string>
    <string name="btnTres">3</string>
    <string name="btnCuatro">4</string>
    <string name="btnCinco">5</string>
    <string name="btnSeis">6</string>
    <string name="btnSiete">7</string>
    <string name="btnOcho">8</string>
    <string name="btnNueve">9</string>
    <string name="btnSumar">+</string>
    <string name="btnRestar">-</string>
    <string name="btnDividir">/</string>
    <string name="btnMultiplicar">*</string>
    <string name="btnIgual">=</string>
    <string name="btnBorrar">←</string>

    <string name="Splash">TP N°1</string>

</resources>