<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ejercicio2">

    <TableLayout
        android:layout_width="384dp"
        android:layout_height="332dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnSiete"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnOcho"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnNueve"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnSumar"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnCuatro"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnCinco"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnSeis"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnRestar"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnUno"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnUno"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnDos"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnDos"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnTres"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnTres"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnMultiplicar"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnMultiplicar"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnBorrar"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnCero"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnCero"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnIgual"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:backgroundTint="#0728DD"
                android:text="@string/btnDividir"
                android:textColor="#EBF835"
                android:textSize="34sp"
                app:iconTint="#0728DC" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="379dp"
        android:layout_height="99dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:hint="0"
        android:textAlignment="textEnd"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>